--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@material-tailwind/react": "^2.1.9",
     "@reduxjs/toolkit": "^2.2.4",
     "axios": "^1.6.8",
+    "flowbite-react": "^0.10.1",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
