--- a/package.json
+++ b/package.json
@@ -9,14 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@material-tailwind/react": "^2.1.9",
     "@reduxjs/toolkit": "^2.2.4",
     "axios": "^1.6.8",
     "flowbite-react": "^0.10.1",
     "js-cookie": "^3.0.5",
     "next": "14.2.3",
+    "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-paginate": "^8.2.0",
     "react-redux": "^9.1.2",
     "react-toastify": "^10.0.5"
   },
