--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.53.0",
     "react-paginate": "^8.2.0",
     "react-redux": "^9.1.2",
     "react-toastify": "^10.0.5"
